<resources>
    <string name="app_name">Password Rack</string>
    <string name="enterPwd">Enter master password:</string>
    <string name="pwd">Password</string>
    <string name="login">Log in</string>
    <string name="usrInput">Enter username:</string>
    <string name="pwdInput">Enter password:</string>
    <string name="userHint">Username</string>
    <string name="accInput">Account:</string>
    <string name="accHint">Account</string>
    <string name="save">Save</string>
    <string name="reset">Restore</string>
    <string name="add">Add new</string>
    <string name="cmtHint">Comments</string>
    <string name="cmtInput">Comments:</string>
    <string name="resetBtn">Delete all</string>
    <string name="entryMasterPwd">To get started, enter a master password:</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="adViewMain">ca-app-pub-9708780034715778/5967795849</string>
    <string name="adViewAddItem">ca-app-pub-9708780034715778/7444529044</string>
    <string name="adViewEntry">ca-app-pub-9708780034715778/7863331447</string>
    <string name="banner_ad_unit_id_test">ca-app-pub-3940256099942544/6300978111</string>
    <string name="itemSaved">Saved!</string>
    <string name="screenClear">Restored!</string>
    <string name="emptyAccount">Account cannot be blank!</string>
    <string name="emptyUser">Username cannot be blank!</string>
    <string name="emptyPwd">Password cannot be blank!</string>
    <string name="savedPwd">Password saved!</string>
    <string name="wrongPwd">Incorrect password</string>
    <string name="emptyMasterPwd">Enter a password</string>
    <string name="deletedEntry">Deleted!</string>
    <string name="saving">Saving...</string>
    <string name="deleting">Deleting...</string>
    <string name="selectAcc">Select an account category:</string>
    <string-array name="accOptions">
        <item>Facebook</item>
        <item>Gmail</item>
        <item>Hotmail</item>
        <item>Instagram</item>
        <item>Pinterest</item>
        <item>Skype</item>
        <item>Twitter</item>
        <item>WiFi</item>
        <item>Other..</item>
    </string-array>
    <string name="yesString">Yes</string>
    <string name="noString">No</string>
    <string name="areYouSure">Are you sure?</string>
    <string name="generated">Password generated!</string>
    <string name="copiedClipboard">Copied to Clipboard!</string>

</resources>
