<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="mobile.tema.passwordkeeper.AddItem"
    >


    <TextView
        android:id="@+id/accTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/accInput"
        />
    <EditText
        android:id="@+id/accInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/accHint"
        android:layout_below="@+id/accTxt"
        android:singleLine="true"
        />

    <TextView
        android:id="@+id/usernameTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/usrInput"
        android:layout_below="@id/accInput"
        />
    <EditText
        android:id="@+id/usrInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/userHint"
        android:layout_below="@+id/usernameTxt"
        android:singleLine="true"
        android:layout_alignRight="@+id/pwdInput"
        android:layout_alignEnd="@+id/pwdInput" />
    <TextView
        android:id="@+id/pwdTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pwdInput"
        android:layout_below="@+id/usrInput"
        />
    <EditText
        android:id="@+id/pwdInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pwd"
        android:layout_below="@id/pwdTxt"
        android:singleLine="true"

        android:layout_toLeftOf="@+id/genPassBtn"
        android:layout_toStartOf="@+id/genPassBtn" />
    <TextView
        android:id="@+id/cmtTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cmtInput"
        android:layout_below="@+id/pwdInput"
        />
    <EditText
        android:id="@+id/cmtInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/cmtHint"
        android:inputType="text"
        android:layout_below="@id/cmtTxt"
        android:singleLine="true"
        android:layout_alignRight="@+id/pwdInput"
        android:layout_alignEnd="@+id/pwdInput" />
    <Button
        android:id="@+id/saveBtn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cmtInput"
        android:text="@string/save"
        android:theme="@style/buttonTheme"
        />
    <Button
        android:id="@+id/resetBtn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cmtInput"
        android:layout_alignEnd="@+id/cmtInput"
        android:layout_alignRight="@+id/cmtInput"
        android:text="@string/reset"
        />
    <Button
        android:id="@+id/editBtn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cmtInput"
        android:text="@string/edit"
        android:visibility="invisible"
        />
    <Button
        android:id="@+id/deleteBtn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cmtInput"
        android:layout_alignEnd="@+id/cmtInput"
        android:layout_alignRight="@+id/cmtInput"
        android:text="@string/delete"
        android:visibility="invisible"
        />
    <com.google.android.gms.ads.AdView
        android:id="@+id/adViewItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id_test">
    </com.google.android.gms.ads.AdView>

    <Button
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:text="..."
        android:id="@+id/genPassBtn"
        android:layout_below="@+id/pwdTxt"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:drawableLeft="@android:drawable/ic_menu_save"
        android:id="@+id/copyUser"
        android:layout_below="@+id/usernameTxt"
        android:layout_alignRight="@+id/usernameTxt"
        android:layout_alignEnd="@+id/usernameTxt" />
    <Button
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:drawableLeft="@android:drawable/ic_menu_save"
        android:id="@+id/copyPwd"
        android:layout_below="@+id/pwdTxt"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:drawableLeft="@android:drawable/ic_menu_save"
        android:id="@+id/copyCmt"
        android:layout_above="@+id/resetBtn"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />


    //TODO CAMBIAR ADD

</RelativeLayout>
