<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="mobile.tema.passwordkeeper.EntryActivity">

    <TextView
        android:id="@+id/enterPwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enterPwd"
        android:textSize="20dp"
        />
    <EditText
        android:id="@+id/pwdField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/enterPwd"
        android:inputType="textPassword"
        android:hint="@string/pwd"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/loginBtn"
        android:layout_below="@+id/pwdField"
        android:text="@string/login"
        />
    <TextView
        android:id="@+id/fail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginBtn"
        android:text=""
        android:textSize="20dp"
        />
</RelativeLayout>
